tests/paczka1/small_fuzzy/56582015.err
Error in line 2: GkoT8Xf S503 47,3
Error in line 4: GkoT8Xf A815 60,0
